force-app/main/default/objects/Zoom_Meeting__c/Zoom_Meeting__c.object-meta.xml
<CustomObject>
    <label>Zoom Meeting</label>
    <nameField>
        <label>Zoom Meeting Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Zoom Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>