force-app/main/default/objects/Zoom_Meeting__c/fields/isAvailable__c.field-meta.xml
<CustomField>
    <fullName>isAvailable__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(Status__c, &quot;Scheduled&quot;),
        NOW() &lt;= Start_Time__c
    ),
    TRUE,
    FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>isAvailable</label>
    <type>Checkbox</type>
</CustomField>