force-app/main/default/objects/Zoom_Meeting__c/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <label>Time Zone</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asia/Kathmandu</fullName>
                <default>true</default>
                <label>Asia/Kathmandu</label>
            </value>
            <value>
                <fullName>Asia/Delhi</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>