force-app/main/default/objects/Zoom_Meeting__c/fields/Zoom_Meeting_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Meeting_Id__c</fullName>
    <label>Zoom Meeting Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>