force-app/main/default/objects/Zoom_Meeting__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Start_Time__c</columns>
    <columns>Time_Zone__c</columns>
    <columns>Status__c</columns>
    <columns>Join_URL__c</columns>
    <columns>isAvailable__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>